--- a/curso.css
+++ b/curso.css
@@ -1,16 +1,14 @@
-th, td {
-    padding: 15px;
-    text-align: left;
-}
-main.tabela{
-    align-items: center;
+main.tabela h3{
+    display: flex;
     justify-content: center;
 }
 
-main.tabela tr, td{
-    border: 1px solid black;
+main.tabela table, tr, td{
+    border: 2px solid black;
     border-collapse: collapse;
     margin: 2rem;
     padding: 8px;
-    text-align: left;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
