--- a/curso.css
+++ b/curso.css
@@ -1,13 +1,18 @@
-main.tabela h3{
+main.tabela legend{
     display: flex;
     justify-content: center;
+    font-size: xx-large;
+}
+
+tbody td.materia{
+    text-align: start;
 }
 
 main.tabela table, tr, td{
     border: 2px solid black;
     border-collapse: collapse;
-    margin: 2rem;
-    padding: 8px;
+    margin: 1rem;
+    padding: 4px;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
